...
        android:id="@+id/mainSignInFragment"
        android:name="com.flowcrypt.email.ui.activity.fragment.MainSignInFragment"
        android:label="MainSignInFragment"
        tools:layout="@layout/fragment_main_sign_in">
        <action
            android:id="@+id/action_mainSignInFragment_to_addOtherAccountFragment"
            app:destination="@id/addOtherAccountFragment" />
        <action
            android:id="@+id/action_mainSignInFragment_to_authorizeAndSearchBackupsFragment"
            app:destination="@id/authorizeAndSearchBackupsFragment" />
        <action
            android:id="@+id/action_mainSignInFragment_to_checkPassphraseStrengthFragment"
            app:destination="@id/checkPassphraseStrengthFragment" />
...
