...
    <string name="try_to_connect">Connect</string>
    <string name="template_imap_server" translatable="false">imap.%1$s</string>
    <string name="template_smtp_server" translatable="false">smtp.%1$s</string>
    <string name="none">None</string>
    <string name="ssl_tls" translatable="false">SSL/TLS</string>
    <string name="startls" translatable="false">STARTLS</string>
    <string name="template_email_already_added">The email \"%1$s\" already added!</string>
    <string name="expand_an_account_managment">Expand an account management</string>
    <string name="add_account">Add account</string>
    <string name="skip_remaining_backups">Skip remaining backups</string>
    <string name="experimental">Experimental</string>
    <string name="experimental_settings">Experimental Settings</string>
    <string name="simulate_app_crash">Simulate app crash</string>
...
